--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,20 @@
   }
 }
 
+.current-movie-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.movie-item {
+  display: flex;
+  flex-direction: column;
+  border: solid 2px black;
+  border-radius: 5%;
+  padding: .5rem;
+}
+
 .form-container {
   width: fit-content;
 }
