--- a/src/App.css
+++ b/src/App.css
@@ -40,7 +40,8 @@
 .current-movie-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 .movie-item {
