--- a/src/App.css
+++ b/src/App.css
@@ -48,7 +48,7 @@
   display: flex;
   flex-direction: column;
   border: solid 2px black;
-  border-radius: 5%;
+  border-radius: 10px;
   padding: .5rem;
 }
 
@@ -74,4 +74,11 @@ label {
 p {
   padding: 0;
   margin: 0 auto;
+}
+
+.movie-list {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
